--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-progress-bar.js": "^0.2.3",
     "react-scripts": "1.1.4"
   },
   "scripts": {
