--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/maxjowett/coindoma.in#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "react-select": "^2.4.3"
   }
 }
