--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/maxjowett/coindoma.in#readme",
   "dependencies": {
-    "gatsby": "^2.19.41",
+    "@carbon/icons-react": "^10.9.1",
+    "carbon-components": "^10.10.1",
+    "carbon-components-react": "^7.10.1",
+    "gatsby": "^2.19.43",
+    "gatsby-plugin-sass": "^2.1.30",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
